note the gas flux units

--- a/djpmcds/mcds/templates/mcds/downloads.html
+++ b/djpmcds/mcds/templates/mcds/downloads.html
@@ -40,6 +40,10 @@
 	 class="linkbutton belowbutton"> click to download </a>
     </div>
 
+    <div class="information">
+      <b> Note: </b> the units for all output gas fluxes are g m-2 h-1
+    </div>
+
   </div>
 
 </div>
