--- a/djpmcds/mcds/templates/mcds/downloads.html
+++ b/djpmcds/mcds/templates/mcds/downloads.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="information">
-      <b> Note: </b> the units for all output gas fluxes are g m-2 h-1
+      <p> <b> Note: </b> the units for all output gas fluxes are g m-2 h-1 </p>
     </div>
 
   </div>
