--- a/djpmcds/mcds/templates/mcds/manageproject.html
+++ b/djpmcds/mcds/templates/mcds/manageproject.html
@@ -101,8 +101,10 @@
 	  <td> {{ ds.id }} </td>
 	  <td> {{ ds.dataspec }} </td>
 	  <td>
-	    <a href="/mcds/viewdataspec/{{ ds.id }}"
-	       class="linkbutton view"> view </a>
+	    todo
+	    <!-- todo: this needs dataspec id, and currently ds.id is the assignment id -->
+	    <!-- <a href="/mcds/viewdataspec/{{ ds.id }}"
+		 class="linkbutton view"> view </a> -->
 	  </td>
 	  <td> {{ ds.author }} </td>
 	  <td> {{ ds.date | date:"Y-m-d H:i:s" }} </td>
