send time axid pad to template

--- a/djpmcds/mcds/templates/mcds/viewpointdata.html
+++ b/djpmcds/mcds/templates/mcds/viewpointdata.html
@@ -57,6 +57,7 @@
 
    const meas_id = {{ meas.id }};
    const interval = {{ interval }}; // mesurement time interval from dataspec
+   const xpad = {{ xpad }}; // time axis padding from dataspec
 
    console.log("interval " + interval);
    
